# ledDUO

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  partitions.csv
docs/: mask.b64  overlay.b64
main/: CMakeLists.txt  captive_portal.c  captive_portal.h  config.h  espnow_example_main.c  espnow_link.c  espnow_link.h  game_logic.c  game_logic.h  http_root_html.h  imu_driver.c  imu_driver.h  led_ws2812.c  led_ws2812.h  web_dashboard.c  web_dashboard.h
